# astroml

./: .gitignore  CALIBRATION_VISUALIZATION.md  CONTRIBUTING.md  Cargo.toml  DEEP_SVDD_FRAUD_DETECTION.md  EFFECTS_MIGRATION_SUMMARY.md  PRIVACY_PRESERVING_ANOMALY_DETECTION.md  README.md  README_HYDRA.md  README_SOROBAN.md  README_enhanced_streaming.md  SECURITY_AUDIT.md  pyproject.toml  requirements-cpu.txt  requirements-minimal.txt  requirements.txt  test_config.py  train.py
astroml/: cli.py  graph_utils.py
benchmark_results/: gcn_benchmark.json  gcn_model.pt
configs/: config.yaml
docs/: Makefile  benchmarking.md  conf.py  experiment-configs.md  index.md  index.rst  requirements.txt  scf-liquidity-monitoring.md  schema.md
examples/: 01_getting_started.ipynb  02_fraud_detection.ipynb  03_transaction_graph_analysis.ipynb  benchmark_example.py  calibration_example.py  deep_svdd_example.py  quick_start.py
k8s/: astroml-deployment.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  rbac.yaml  redis-deployment.yaml
outputs/: config.yaml  results.yaml
scripts/: deploy.sh  examples.sh
src/: lib.rs  security_tests.rs  test.rs
tests/: test_frequency.py  test_graph_to_pyg.py  test_graphsage.py  test_inductive_generalization.py  test_inductive_pipeline.py  test_inductive_scoring.py  test_inductive_training.py  test_link_prediction.py  test_multi_hop_sampler.py  test_preprocessing_polars.py  test_sage_encoder.py  test_schema.py  test_security.py  test_synthetic_fraud_injector.py  test_temporal_split.py
web/: package.json  vitest.setup.ts
(+130 files in other folders)
