[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "astroml"
version = "0.1.0"
description = "Dynamic graph ML framework for the Stellar network"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["astroml*"]
